--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "pocketmine/snooze": "^0.1.0",
     "daverandom/callback-validator": "dev-master",
     "adhocore/json-comment": "^0.0.7",
-    "phpunit/phpunit": "^9.1"
+    "phpunit/phpunit": "^9.1",
+    "ext-mysqli": "*"
   },
   "autoload": {
     "psr-4": {
