銃システムの根本的なアイテム追加の仕組みを変更
銃はコマンドからのみ取得可能に。すべて弓に変更。

--- a/plugin.yml
+++ b/plugin.yml
@@ -11,3 +11,6 @@ permissions:
       Team.Command:
         default: true
         description: "チームシステム"
+      Gun.Command:
+        default: true
+        description: "ガンシステム"
