--- a/composer.json
+++ b/composer.json
@@ -4,43 +4,11 @@
   "authors": [
     {
       "name": "suinua"
+    },
+    {
+      "name": "ribnil"
     }
   ],
-  "require": {
-    "php": ">=7.2.0",
-    "php-64bit": "*",
-    "ext-bcmath": "*",
-    "ext-curl": "*",
-    "ext-crypto": "^0.3.1",
-    "ext-ctype": "*",
-    "ext-date": "*",
-    "ext-gmp": "*",
-    "ext-hash": "*",
-    "ext-json": "*",
-    "ext-mbstring": "*",
-    "ext-openssl": "*",
-    "ext-pcre": "*",
-    "ext-phar": "*",
-    "ext-pthreads": "*",
-    "ext-reflection": "*",
-    "ext-sockets": "*",
-    "ext-spl": "*",
-    "ext-yaml": "*",
-    "ext-zip": "*",
-    "ext-zlib": ">=1.2.11",
-    "mdanter/ecc": "*",
-    "pocketmine/pocketmine-mp": "*",
-    "pocketmine/raklib": "^0.12.0",
-    "pocketmine/spl": "^0.3.0",
-    "pocketmine/binaryutils": "^0.1.0",
-    "pocketmine/nbt": "^0.2.1",
-    "pocketmine/math": "^0.2.0",
-    "pocketmine/snooze": "^0.1.0",
-    "daverandom/callback-validator": "dev-master",
-    "adhocore/json-comment": "^0.0.7",
-    "phpunit/phpunit": "^9.1",
-    "ext-mysqli": "*"
-  },
   "autoload": {
     "psr-4": {
       "": [
