--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "MineDeepRock",
+  "name": "mine-deep-rock/mine-deep-rock",
   "type": "project",
   "authors": [
     {
@@ -44,6 +44,23 @@
     {
       "type": "git",
       "url": "https://github.com/pmmp/Snooze"
+    },
+    {
+      "type": "git",
+      "name": "suinua/easy-scoreboard-api",
+      "url": "https://github.com/suinua/EasyScoreboardApi"
     }
-  ]
+  ],
+  "require": {
+    "ext-json": "*",
+    "ext-mysqli": "*",
+    "pocketmine/pocketmine-mp": "*",
+    "pocketmine/raklib": "^0.12.0",
+    "pocketmine/spl": "^0.3.0",
+    "pocketmine/binaryutils": "^0.1.0",
+    "pocketmine/nbt": "^0.2.1",
+    "pocketmine/math": "^0.2.0",
+    "pocketmine/snooze": "^0.1.0",
+    "suinua/easy-scoreboard-api": "dev-master"
+  }
 }
