worldコマンドの追加

--- a/plugin.yml
+++ b/plugin.yml
@@ -17,3 +17,6 @@ permissions:
       State.Command:
         default: true
         description: "ステートコマンド"
+      World.Command:
+        default: true
+        description: "ワールドコマンド"
