武器ごとのキル数のランキングを表示するコマンドを追加

--- a/plugin.yml
+++ b/plugin.yml
@@ -23,3 +23,6 @@ permissions:
       NPC.Command:
         default: true
         description: "ワールドコマンド"
+      Ranking.Command:
+        default: true
+        description: "ランキングコマンド"
