--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,11 @@
       "type": "git",
       "name": "suinua/easy-scoreboard-api",
       "url": "https://github.com/suinua/EasyScoreboardApi"
+    },
+    {
+      "type": "git",
+      "name": "suinua/boss-bar-api",
+      "url": "https://github.com/suinua/BossBarAPI"
     }
   ],
   "require": {
@@ -61,6 +66,8 @@
     "pocketmine/nbt": "^0.2.1",
     "pocketmine/math": "^0.2.0",
     "pocketmine/snooze": "^0.1.0",
-    "suinua/easy-scoreboard-api": "dev-master"
+    "suinua/easy-scoreboard-api": "dev-master",
+    "suinua/boss-bar-api": "dev-master",
+    "ext-gd": "*"
   }
 }
