--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,31 @@
       "type": "git",
       "name": "suinua/team_death_match_system",
       "url": "https://github.com/MineDeepRock/team_death_match_system"
+    },
+    {
+      "type": "git",
+      "name": "suinua/military_department_system",
+      "url": "https://github.com/MineDeepRock/military_department_system"
+    },
+    {
+      "type": "git",
+      "name": "suinua/slot_menu_system",
+      "url": "https://github.com/MineDeepRock/slot_menu_system"
+    },
+    {
+      "type": "git",
+      "name": "suinua/gun_system",
+      "url": "https://github.com/MineDeepRock/gun_system"
+    },
+    {
+      "type": "git",
+      "name": "suinua/box_system",
+      "url": "https://github.com/MineDeepRock/box_system"
+    },
+    {
+      "type": "git",
+      "name": "suinua/grenade_system",
+      "url": "https://github.com/MineDeepRock/grenade_system"
     }
   ],
   "require": {
@@ -74,6 +99,11 @@
     "suinua/two_team_game_system": "dev-master",
     "ext-json": "*",
     "suinua/boss-bar-api": "dev-master",
-    "suinua/team_death_match_system": "dev-master"
+    "suinua/team_death_match_system": "dev-master",
+    "suinua/slot_menu_system": "dev-master",
+    "suinua/military_department_system": "dev-master",
+    "suinua/gun_system": "dev-master",
+    "suinua/box_system": "dev-master",
+    "suinua/grenade_system": "dev-master"
   }
 }
