パッケージの追加

--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,11 @@
       "type": "git",
       "name": "suinua/weapon_data_system",
       "url": "https://github.com/MineDeepRock/weapon_data_system"
+    },
+    {
+      "type": "git",
+      "name": "suinua/money_system",
+      "url": "https://github.com/MineDeepRock/money_system"
     }
   ],
   "require": {
@@ -110,6 +115,7 @@
     "suinua/gun_system": "dev-master",
     "suinua/box_system": "dev-master",
     "suinua/grenade_system": "dev-master",
-    "suinua/weapon_data_system": "dev-master"
+    "suinua/weapon_data_system": "dev-master",
+    "suinua/money_system": "dev-master"
   }
 }
