--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,8 @@
     },
     {
       "type": "git",
-      "name": "suinua/boss-bar-api",
-      "url": "https://github.com/suinua/BossBarAPI"
+      "name": "suinua/bossbar_system",
+      "url": "https://github.com/MineDeepRock/bossbar_system"
     },
     {
       "type": "git",
@@ -98,8 +98,8 @@
     },
     {
       "type": "git",
-      "name": "suinua/team_name_tag_system",
-      "url": "https://github.com/MineDeepRock/team_name_tag_system"
+      "name": "suinua/private_name_tag",
+      "url": "https://github.com/MineDeepRock/private_name_tag"
     },
     {
       "type": "git",
@@ -118,7 +118,7 @@
     "suinua/team_system": "dev-master",
     "suinua/two_team_game_system": "dev-master",
     "ext-json": "*",
-    "suinua/boss-bar-api": "dev-master",
+    "suinua/bossbar_system": "dev-master",
     "suinua/team_death_match_system": "dev-master",
     "suinua/slot_menu_system": "dev-master",
     "suinua/military_department_system": "dev-master",
@@ -127,7 +127,7 @@
     "suinua/grenade_system": "dev-master",
     "suinua/weapon_data_system": "dev-master",
     "suinua/money_system": "dev-master",
-    "suinua/team_name_tag_system": "dev-master",
+    "suinua/private_name_tag": "dev-master",
     "suinua/sandbag_system": "dev-master"
   }
 }
