--- a/composer.json
+++ b/composer.json
@@ -43,23 +43,13 @@
     },
     {
       "type": "git",
-      "name": "suinua/team_system",
-      "url": "https://github.com/MineDeepRock/team_system"
-    },
-    {
-      "type": "git",
-      "name": "suinua/two_team_game_system",
-      "url": "https://github.com/MineDeepRock/two_team_game_system"
+      "name": "suinua/team_game_system",
+      "url": "https://github.com/MineDeepRock/team_game_system"
     },
     {
       "type": "git",
       "name": "suinua/bossbar_system",
       "url": "https://github.com/MineDeepRock/bossbar_system"
-    },
-    {
-      "type": "git",
-      "name": "suinua/team_death_match_system",
-      "url": "https://github.com/MineDeepRock/team_death_match_system"
     },
     {
       "type": "git",
@@ -93,11 +83,6 @@
     },
     {
       "type": "git",
-      "name": "suinua/money_system",
-      "url": "https://github.com/MineDeepRock/money_system"
-    },
-    {
-      "type": "git",
       "name": "suinua/private_name_tag",
       "url": "https://github.com/MineDeepRock/private_name_tag"
     },
@@ -125,18 +110,14 @@
     "pocketmine/nbt": "^0.2.1",
     "pocketmine/math": "^0.2.0",
     "pocketmine/snooze": "^0.1.0",
-    "suinua/team_system": "dev-master",
-    "suinua/two_team_game_system": "dev-master",
+    "suinua/team_game_system": "dev-master",
     "ext-json": "*",
     "suinua/bossbar_system": "dev-master",
-    "suinua/team_death_match_system": "dev-master",
     "suinua/slot_menu_system": "dev-master",
-    "suinua/military_department_system": "dev-master",
     "suinua/gun_system": "dev-master",
     "suinua/box_system": "dev-master",
     "suinua/grenade_system": "dev-master",
     "suinua/weapon_data_system": "dev-master",
-    "suinua/money_system": "dev-master",
     "suinua/private_name_tag": "dev-master",
     "suinua/sandbag_system": "dev-master",
     "suinua/scoreboard_system": "dev-master",
