add flag command

--- a/plugin.yml
+++ b/plugin.yml
@@ -19,3 +19,6 @@ commands:
   view:
     usage: "/view [,tdm]"
     description: "参加しているゲームの参加人数を知りたい/view,TDMの参加人数リストがみたい/view tdm"
+  flag:
+    usage: "/flag"
+    description: "setting flag"
